<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="0dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/institution_image"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:alpha=".60"
                android:src="@drawable/fa_user_md"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/record_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/doctor_name_value"
                android:layout_toRightOf="@+id/institution_image" />

            <TextView
                android:id="@+id/record_patient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/record_doctor"
                android:paddingLeft="5dp"
                android:textSize="10sp"
                android:text="@string/patient_name_value"
                android:layout_toRightOf="@+id/institution_image" />

            <TextView
                android:id="@+id/record_attention_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/record_patient"
                android:paddingLeft="5dp"
                android:textSize="10sp"
                android:text="@string/attention_type_value"
                android:layout_toRightOf="@+id/institution_image" />

            <TextView
                android:id="@+id/record_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/record_attention_type"
                android:paddingLeft="5dp"
                android:textSize="10sp"
                android:text="@string/date_value"
                android:layout_toRightOf="@+id/institution_image" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>