<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="2dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/record_code"
            android:textStyle="bold"
            android:text="@string/record_code" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:id="@+id/record_code_value" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:id="@+id/record_date"
            android:text="@string/date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:id="@+id/record_date_value" />

    </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="2dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <TextView
            android:id="@+id/record_doctor_autocompleter"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/doctor" />

        <TextView
            android:id="@+id/record_doctor_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp" />

    </LinearLayout></android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="2dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:id="@+id/body_patient">

        <TextView
            android:id="@+id/record_patient"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/patient"/>

        <TextView
            android:id="@+id/record_patient_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp" />

    </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="2dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:id="@+id/body_finish_treatment_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/record_ruc"
            android:textStyle="bold"
            android:text="@string/record_ruc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/record_ruc_value"
            android:paddingLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/record_sale_date"
            android:text="@string/date"
            android:paddingLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:id="@+id/record_sale_date_value" />

    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="2dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:id="@+id/body_finish_treatment_3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/record_ubigeo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/patient_location_field" />

        <TextView
            android:id="@+id/record_ubigeo_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp" />

    </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="2dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/body_finish_treatment_4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/record_agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/patient_agent_field" />

            <TextView
                android:id="@+id/record_agent_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="2dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/body_finish_treatment_5"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/record_institution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/patient_institution_field" />

            <TextView
                android:id="@+id/record_institution_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medical_sample"
        android:id="@+id/header_medical_saple"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:id="@+id/record_medical_sample"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/ButtonAppTheme"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:layout_margin="2dp"
            android:id="@+id/record_back"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>