<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="Seleccione un Representante y la Institución de donde Proviene. mientras este activado todas las atenciones se relacionaran al representante."
        android:id="@+id/textView4" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <AutoCompleteTextView
                android:id="@+id/agent_agent_autocompleter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/agent_field"
                android:inputType="textCapCharacters" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <AutoCompleteTextView
                android:id="@+id/agent_institution_autocompleter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/institution"
                android:inputType="textCapCharacters" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_weight="1"
            android:onClick="addAgent"
            style="@style/ButtonAppTheme"
            android:id="@+id/agent_add"
            android:layout_marginRight="2.5dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            style="@style/ButtonAppTheme"
            android:layout_weight="1"
            android:layout_marginLeft="2.5dp"
            android:id="@+id/agent_cancel"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>